<resources>
    <string name="app_name">Lets Print</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="get_in">Get in</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="text_enter">Enter your phone number. We will send you a 4 digit code to verify.</string>
    <string name="enter_your_code">Enter your code</string>
    <string name="code_is_send">Code is sent to +84123456789</string>
    <string name="send_the_code_again">Send the code again</string>
    <string name="verity">Verity</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="profile">Profile</string>
</resources>