<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|start"
        android:padding="30dp"
        tools:context=".ui.fragment.ProfileFragment">

        <TextView
            android:textSize="30sp"
            android:textColor="#663695"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:text="@string/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/first_name"
            android:textColor="#663695"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:backgroundTint="#663695"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="#663695"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:backgroundTint="#663695"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="#663695"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="#663695"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:backgroundTint="#663695"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="#663695"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:backgroundTint="#663695"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="#663695"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="Cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:text="Update"
            android:layout_marginTop="15dp"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:background="@drawable/custom_btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</layout>