<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="50dp"
        tools:context=".ui.fragment.SignUpFragment">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_fml"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_btn_no_select"
            android:text="@string/login"
            android:textColor="#8658A4"
            app:layout_constraintBottom_toTopOf="@id/view_from"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_sign_up" />
        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn_in_select"
            android:text="@string/sign_up"
            android:textColor="#8658A4"
            app:layout_constraintBottom_toBottomOf="@id/btn_login"
            app:layout_constraintLeft_toRightOf="@id/btn_login"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_login" />
        <LinearLayout
            android:id="@+id/view_from"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/text_login"
                android:text="@string/first_name" />
            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#663695"/>
            <TextView
                android:id="@+id/tv_last_name"
                android:text="@string/last_name"
                android:textAppearance="@style/text_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_last_name"
                android:backgroundTint="#663695"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_email"
                android:text="@string/email"
                android:textAppearance="@style/text_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:backgroundTint="#663695"
                android:layout_height="wrap_content"/>
            <TextView
                android:textAppearance="@style/text_login"
                android:id="@+id/tv_password"
                android:text="Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:backgroundTint="#663695"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_get_in"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/get_in"
            style="@style/btn_get_in"
            android:layout_margin="10dp"
            android:background="@drawable/custom_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_from" />
        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:textAppearance="@style/forgot_your"
            app:layout_constraintLeft_toLeftOf="@id/btn_get_in"
            app:layout_constraintRight_toRightOf="@id/btn_get_in"
            app:layout_constraintTop_toBottomOf="@id/btn_get_in" />
        <ImageButton
            android:id="@+id/btn_facebook"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="12dp"
            android:background="@drawable/btn_login_with"
            android:elevation="5dp"
            android:src="@drawable/ic_facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_twitter" />
        <ImageButton
            android:id="@+id/btn_twitter"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="12dp"
            android:background="@drawable/btn_login_with"
            android:elevation="5dp"
            android:src="@drawable/ic_tittwer"
            app:layout_constraintTop_toTopOf="@id/btn_facebook"
            app:layout_constraintBottom_toBottomOf="@id/btn_facebook"
            app:layout_constraintLeft_toRightOf="@id/btn_facebook"
            app:layout_constraintRight_toLeftOf="@id/btn_google" />
        <ImageButton
            android:id="@+id/btn_google"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="12dp"
            android:background="@drawable/btn_login_with"
            android:elevation="5dp"
            android:src="@drawable/ic_google"
            app:layout_constraintBottom_toBottomOf="@id/btn_facebook"
            app:layout_constraintTop_toTopOf="@id/btn_facebook"
            app:layout_constraintLeft_toRightOf="@id/btn_twitter"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>